2005-10-23 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node_impl_util.cpp:  Doc-comment
	fixes.

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	Moved utility classes to assist implementation of nodes to the
	openvrml::node_impl_util namespace.

	* doc/Makefile.am:  Added node_impl_util.cpp and
	node_impl_util.h as prerequisites.
	* src/libopenvrml/Makefile.am
	* src/libopenvrml/private.h:  Moved polymorphic_ptr_to_mem and
	polymorphic_ptr_to_mem_impl class templates to the
	openvrml::node_impl_util namespace.
	* src/libopenvrml/openvrml/node_impl_util.cpp:  Added file.
	* src/libopenvrml/openvrml/node_impl_util.h:  Added file.
	* src/libopenvrml/openvrml/vrml97node.cpp:  Moved utility
	classes to assist implementation of nodes to the
	openvrml::node_impl_util namespace.

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/field_value.cpp:  Removed #if 0'd
	code.

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	Gave field_value classes copy-on-write semantics.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/X3DVrmlParser.cpp
	* src/libopenvrml/openvrml/X3DVrmlParser.g
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/field_value.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	* doc/Doxyfile:  Ignore X3DVrmlParser source files.

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	Clean up of clean up.

	* src/libopenvrml/openvrml/X3DVrmlParser.cpp
	* src/libopenvrml/openvrml/X3DVrmlParser.g

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/basetypes.cpp:  Doc-comment fixes.

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	Code clean up; fixed some variable names.
